# flatland

./: README.md
examples/: normals.txt
examples/with_fields/: cases.txt  generate_field.py
src/: CMakeLists.txt  clean_build.sh  main.cpp  run_build.sh
